# AlgorithmicTradingEngine

./: CMakeLists.txt  README.md  empty.cpp  main.cpp
AlgoSandBox/: CMakeLists.txt  SandBox.cpp  main.cpp
AlgorithmicTradingEngine/: CMakeLists.txt  main.cpp
AlgorithmicTradingEngine/DataManager/: DataFrame.cpp  DataFrame.h  DataSeries.cpp  DataSeries.h
AlgorithmicTradingEngine/MarketDataProviders/: AlphaVantageProvider.h  MarketDataAccess.cpp  MarketDataAccess.h  MarketDataProvider.cpp  MarketDataProvider.h  MarketDataProviderFactory.h
MarketDataProviders/: AlphaVantageProvider.cpp  AlphaVantageProvider.h  MarketDataAccess.cpp  MarketDataAccess.h  MarketDataAccessor.h  MarketDataProvider.h  MarketDataProviderFactory.cpp
